# telomap

./: .travis.yml  CHANGELOG.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  setup1.py
src/telomap/: __init__.py  capture.py  cluster.py  integrate.py  plots.py  telomap.py  tvs.py  utils.py
telomap/: __init__.py  capture.py  capture_wgs  capture_wgs.py  cluster.py  integrate.py  plots.py  telomap  telomap.py  tvs.py  utils.py
telomap/ref/: t2t-chm13-subtelo-1000-60.fa
